--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <div class="header-nav clear-fix"> 
+        <div class="header-nav fixed clear-fix"> 
             <div class="container">      
                     <div class="nav-top-left float-left" >
                         <ul>
@@ -29,7 +29,7 @@
                     </div>                   
             </div>
         </div>  
-        <div class="header-nav bottom clear-fix"> 
+        <div class="header-nav fixedspace bottom clear-fix"> 
             <div class="container">
                 <div class="header-nav-bottom clear-fix">
                     <div class="logo float-left">
