--- a/index.html
+++ b/index.html
@@ -9,32 +9,42 @@
     <title>Hubspot-Classe#24</title>
 </head>
 <body>
+    <!-- Inizio header -->
     <header>
-        <div class="header-nav fixed clear-fix"> 
-            <div class="container">      
+        <!-- Header nav top fixed -->
+        <div class="header-nav fixed clear-fix">
+            <!-- Contenitore generale 80% width -->
+            <div class="container">
+                    <!-- Sezione top di sinistra -->
                     <div class="nav-top-left float-left" >
                         <ul>
                             <li><i class="fas fa-globe-europe "></i></li>
                             <li>English</li>
-                            <li><i class="fas fa-angle-down"></i></li>  
+                            <li><i class="fas fa-angle-down"></i></li>
                             <li><a href="#">Contact us</a></li>
                         </ul>
                     </div>
+                    <!-- Sezione top destra -->
                     <div class="nav-top-right float-right ">
                         <ul>
                             <li><i class="fas fa-search"></i></li>
                             <li><a href="#" class="btn btn-total-orange">Log in</a></li>
                             <li><a href="#" class="btn btn-orange">GetHubspotFree</a></li>
                         </ul>
-                    </div>                   
+                    </div>
             </div>
-        </div>  
-        <div class="header-nav fixedspace bottom clear-fix"> 
+        </div>
+        <!-- Header nav bottom -->
+        <div class="header-nav fixedspace bottom clear-fix">
+            <!-- Contenitore generale 80% width -->
             <div class="container">
+                <!-- Nav bottom -->
                 <div class="header-nav-bottom clear-fix">
+                    <!-- Logo float left -->
                     <div class="logo float-left">
                         <img src="img/logo.svg" alt="logo">
                     </div>
+                    <!-- menu float right -->
                     <div class="menu-right float-right">
                         <ul>
                             <li> <a href="#">Software</a></li>
@@ -51,27 +61,62 @@
                 </div>
              </div>
         </div>
+        <!-- Sezione Jumbotron -->
         <div class="jumbotron">
             <div class="container">
                 <div class="jumbotron-section float-left">
                     <h1>There's a better way to grow </h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita dicta aperiam ipsam ea corporis tenetur ullam odit iusto id, repudiandae fugiat ipsum consequuntur dolorum provident voluptatem eveniet alias necessitatibus voluptatibus.</p>
                     <a href=""class="btn btn-orange btn-large">GetHubspotFree</a>
-                    <h3>Get started with FREE tools, and upgrade as you grow</h3>                
-                </div>
-
+                    <h3>Get started with FREE tools, and upgrade as you grow</h3>
+                 </div>
             </div>
-            
-
         </div>
+        <!-- Classe bordo after image -->
         <div class="bordo"></div>
     </header>
     <main>
+        <!-- Prima sezione -->
+        <section class="container ">
+            <div class="block-1">
+                <img src="img\Integrations_Illustration@2x.webp" alt="immagine-illustration">
+                <h1>Power Alone. Better Togheter</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda ab fuga earum ut at labore necessitatibus quasi, nulla blanditiis dolorem eveniet commodi tempora eligendi consequuntur cumque praesentium, quidem tenetur ullam.</p>
+            </div>
+        </section>
+        <!-- Seconda Sezione 2 block -->
+        <section>
+            <div class="container">
+                <!-- contenitore genereale prima sezione -->
+                <div class="block-2 clear-fix white-bg">
+                    <!-- blocco di sinistr -->
+                    <div class="block-left float-left ">
+                        <!-- per posizionare tutto il blocco  -->
+                        <div class="wrapper">
+                            <img src="img/CRM-Illustration.svg" alt="img-crm">
+                            <a href="#" class="btn btn-orange btn-large">Learn more</a>
+                        </div>
+                    </div>
+                    <div class="block-2-right float-left white-bg">
+                    
+                            <h1>Free HubSpot CRM</h1>
+                            <p>Everything you need to organize, track, and build better relationships with leads and customers. Yes it's 100% free, Forever. </p>
+                            <h2>Popolar feature</h2>
+                            <ul>
+                                <li><i class="fas fa-check-circle"></i></li>
+                                <li>Contact Insigh</li>
+                                <li><i class="fas fa-check-circle"></i></li>
+                                <li>Delas</li>
+                                <li><i class="fas fa-check-circle"></i></li>
+                                <li>Task</li>
+                            </ul>
+                    </div>
+                <div>
 
-    </maiin>
+            </div>
 
-
-
+        </section>
+    </main>
 </body>
 
 </html>
