terza sezione completata

--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda ab fuga earum ut at labore necessitatibus quasi, nulla blanditiis dolorem eveniet commodi tempora eligendi consequuntur cumque praesentium, quidem tenetur ullam.</p>
             </div>
         </section>
-        <!-- Seconda Sezione 2 block -->
+        <!-- Seconda Sezione due block -->
         <section>
             <div class="container">
                 <!-- contenitore genereale prima sezione -->
-                <div class="block-2 clear-fix white-bg">
+                <div class="block-2 clear-fix ">
                     <!-- blocco di sinistr -->
                     <div class="block-left float-left ">
                         <!-- per posizionare tutto il blocco  -->
@@ -97,26 +97,110 @@
                             <a href="#" class="btn btn-orange btn-large">Learn more</a>
                         </div>
                     </div>
-                    <div class="block-2-right float-left white-bg">
-                    
-                            <h1>Free HubSpot CRM</h1>
-                            <p>Everything you need to organize, track, and build better relationships with leads and customers. Yes it's 100% free, Forever. </p>
-                            <h2>Popolar feature</h2>
-                            <ul>
-                                <li><i class="fas fa-check-circle"></i></li>
-                                <li>Contact Insigh</li>
-                                <li><i class="fas fa-check-circle"></i></li>
-                                <li>Delas</li>
-                                <li><i class="fas fa-check-circle"></i></li>
-                                <li>Task</li>
-                            </ul>
+                    <!-- Blocco di destra -->
+                    <div class="block-2-right float-left ">
+                        <h1>Free HubSpot CRM</h1>
+                        <p>Everything you need to organize, track, and build better relationships with leads and customers. Yes it's 100% free, Forever. </p>
+                        <h2>Popolar feature</h2>
+                        <!-- Check information -->
+                        <ul>
+                             <li><i class="fas fa-check-circle"></i></li>
+                            <li>Contact Insigh</li>
+                            <li><i class="fas fa-check-circle"></i></li>
+                            <li>Delas</li>
+                            <li><i class="fas fa-check-circle"></i></li>
+                            <li>Task</li>
+                        </ul>
                     </div>
                 <div>
+            </div>
+        </section>
+        <!-- Seconda sezione tre blocchi -->
+        <section>
+            <!-- Contenitore generale -->
+            <div class="container clear-fix">
+                <!-- Sezione tre blocchi -->
+                <div class="sezione-tre-blocchi clear-fix">
+                    <!-- Prima colonna -->
+                    <aside class="col  float-left">
+                        <div class="items-top">
+                            <img src="img/Marketing-Hub-Free.svg" alt="logo-marketing">                          
+                        </div>
+                        <div class="items-middle">
+                            <h1>Marketing Hub</h1> 
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit facilis porro illo ipsam magni fugiat cum asperiores animi, qui eum unde quidem blanditiis iste aperiam itaque aspernatur, distinctio provident tenetur?</p>
+                        </div>
+                        <div class="items-bottom">
+                            <span>Popolar feature</span>
+                            <ul>  
+                                <li><i class="fas fa-check-circle"></i>Lead Generation</li>
+                                <li><i class="fas fa-check-circle"></i>Marketing Automation</li>
+                                <li><i class="fas fa-check-circle"></i>Analytics</li>
+                            </ul>
+                            <a href="#" class="btn btn-orange btn-large">Learn more</a>
+                        </div>
+                    </aside>
+                    <!-- Seconda colonna -->
+                    <aside class="col center float-left">
+                        <div class="items-top">
+                            <img src="img/Sales-Professional-Illustration.svg" alt="logo-Professional-illustrations">                          
+                        </div>
+                        <div class="items-middle">
+                            <h1>Sales Hub</h1> 
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit facilis porro illo ipsam magni fugiat cum asperiores animi, qui eum unde quidem blanditiis iste aperiam itaque aspernatur, distinctio provident tenetur?</p>
+                        </div>
+                        <div class="items-bottom">
+                            <span>Popolar feature</span>
+                            <ul>  
+                                <li><i class="fas fa-check-circle"></i>Lead Generation</li>
+                                <li><i class="fas fa-check-circle"></i>Marketing Automation</li>
+                                <li><i class="fas fa-check-circle"></i>Analytics</li>
+                            </ul>
+                            <a href="#" class="btn btn-orange btn-large">Learn more</a>
+                        </div>
+                    </aside>
+                    <!-- Terza colonna -->
+                    <aside class="col  float-left">
+                        <div class="items-top">
+                            <img src="img/Service-Hub-Illustration.svg" alt="logo-service-hub">                          
+                        </div>
+                        <div class="items-middle">
+                            <h1>Service Hub</h1> 
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit facilis porro illo ipsam magni fugiat cum asperiores animi, qui eum unde quidem blanditiis iste aperiam itaque aspernatur, distinctio provident tenetur?</p>
+                        </div>
+                        <div class="items-bottom">
+                            <span>Popolar feature</span>
+                            <ul>  
+                                <li><i class="fas fa-check-circle"></i>Lead Generation</li>
+                                <li><i class="fas fa-check-circle"></i>Marketing Automation</li>
+                                <li><i class="fas fa-check-circle"></i>Analytics</li>
+                            </ul>
+                            <a href="#" class="btn btn-orange btn-large">Learn more</a>
+                        </div>
+                    </aside>
+                </div>
+            </div>
+        </section>
+        <section class="banner">
+            <div class="container">
+                <div class="header-banner">
+                    <h1>Learn and grow with award-winning support and a thriving community behind you.</h1>
+                    <p>You don't have to go it alone. Master the inhound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you</p>
+                </div>
+                <div class="header-bottom">
+                        <div class="">
+
+                        </div>
+                </div>
 
             </div>
 
+
         </section>
+
+
     </main>
+
 </body>
 
 </html>
