quarta sezione terminata

--- a/index.html
+++ b/index.html
@@ -188,12 +188,54 @@
                     <p>You don't have to go it alone. Master the inhound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you</p>
                 </div>
                 <div class="header-bottom">
-                        <div class="">
-
+                    <div class="infomation-section">
+                                <div>
+                                   <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" alt="">
+                                    <span>150</span> 
+                                 <span>HubSpot user groups</span> 
+                                </div>
+                                <div>
+                                    <img style="width: 30%;" src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_blog.svg" alt="">
+                                     <span>7M</span> 
+                                  <span>Monthly visits</span> 
+                                 </div>
+                                 <div>
+                                    <img style="width: 55%;" src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_academy.svg" alt="">
+                                     <span>305K</span> 
+                                  <span>certified professionals</span> 
+                                 </div>
+                                 <div>
+                                    <img style="width: 50%;" src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_inbound.svg" alt="">
+                                     <span>26K</span> 
+                                  <span>registered attendees</span> 
+                                 </div>
+                     </div>
+                     <div class="infomation-section noborder-bottom">
+                        <div>
+                           <img style="width: 45%;" src="https://cdn2.hubspot.net/hubfs/53/HubSpot-App-Marketplace-White.png" alt="">
+                            <span>550</span> 
+                         <span>Integrations</span> 
                         </div>
-                </div>
+                        <div>
+                            <img style="width: 10%;" src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_globe.svg" alt="">
+                             <span>6</span> 
+                          <span>Languages</span> 
+                         </div>
+                         <div>
+                            <img style="width: 10%;" src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_followers.svg" alt="">
+                             <span>2.6M</span> 
+                          <span>Social followers</span> 
+                         </div>
+                         <div>
+                            <img style="width: 10%;" src="https://cdn2.hubspot.net/hubfs/53/Lists.svg" alt="">
+                             <span>95,000</span> 
+                          <span>customers</span> 
+                         </div>
+             </div>
+                 </div> 
+             </div>
 
-            </div>
+         
 
 
         </section>
