--- a/index.html
+++ b/index.html
@@ -210,39 +210,72 @@
                                   <span>registered attendees</span> 
                                  </div>
                      </div>
-                     <div class="infomation-section noborder-bottom">
+                     <div class="infomation-section no-border-bottom ">
                         <div>
-                           <img style="width: 45%;" src="https://cdn2.hubspot.net/hubfs/53/HubSpot-App-Marketplace-White.png" alt="">
+                            <img style="width: 55%;" src="https://cdn2.hubspot.net/hubfs/53/HubSpot-App-Marketplace-White.png" alt="">
                             <span>550</span> 
-                         <span>Integrations</span> 
+                            <span>Integrations</span> 
                         </div>
                         <div>
-                            <img style="width: 10%;" src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_globe.svg" alt="">
+                            <img style="width: 15%;" src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_globe.svg" alt="">
                              <span>6</span> 
-                          <span>Languages</span> 
+                            <span>Languages</span> 
                          </div>
                          <div>
-                            <img style="width: 10%;" src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_followers.svg" alt="">
-                             <span>2.6M</span> 
-                          <span>Social followers</span> 
+                            <img style="width: 15%;" src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_followers.svg" alt="">
+                            <span>2.6M</span> 
+                            <span>Social followers</span> 
                          </div>
                          <div>
-                            <img style="width: 10%;" src="https://cdn2.hubspot.net/hubfs/53/Lists.svg" alt="">
-                             <span>95,000</span> 
-                          <span>customers</span> 
+                            <img style="width: 15%;" src="https://cdn2.hubspot.net/hubfs/53/Lists.svg" alt="">
+                            <span>95,000</span> 
+                            <span>customers</span> 
                          </div>
-             </div>
-                 </div> 
-             </div>
+                    </div>
+                </div> 
+            </div>
+        </section>
+        <section class="section-home-information">
+           <div class="container">
+               <div class="home-information clear-fix">
+                    <div class="home-header">
+                        <div class="left float-left ">
+                        <h1>64,500</h1>
+                        <p>customers in over 100 countries growing their businesses with HubSpot</p>
+                        </div>
+                    <div class="right float-right">
+                         <div class="home-img">
+                            <img src="https://f.hubspotusercontent00.net/hubfs/53/1200px-WWF_logo_svg%20(1).png" alt="">
+                            <img src="https://f.hubspotusercontent00.net/hubfs/53/trello-logo-blue%20(1).png" alt="">
+                            <img src="https://f.hubspotusercontent00.net/hubfs/53/1200px-G2_Crowd_logo.svg.png" alt="">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/homepage/Vertical_Sabaeus_RGB.svg" alt="">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Subaru_Logo_v2_186x63@2x.png" alt="">
+                            <img src="https://f.hubspotusercontent00.net/hubfs/53/soundcloud.png" alt="">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Classpass-logo@2x.png" alt="">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/VMware_logo_gry_RGB_300dpi@2x.png" alt="">
+                        </div>
+                         
+                    </div>
+                    </div>
+                <div class="home-main">
+                        <div class="information-left">
+                            <h1>Start Growing With HubSpot Today</h1>
+                            <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur voluptates esse accusamus nulla officia doloremque, amet, nemo, quam ullam obcaecati suscipit iure hic! Cumque unde excepturi facilis, eius voluptatum enim?</p>
+                            <a href=""class="btn btn-orange btn-large">GetHubspotFree</a>
+                            <h3>Get started with FREE tools, and upgrade as you grow</h3>
+                        </div>
+                </div>
 
-         
-
-
+              </div>
+            </div> 
         </section>
 
-
     </main>
+    <footer>
+        <div class="container">
 
+        </div>
+    </footer>
 </body>
 
 </html>
