--- a/index.html
+++ b/index.html
@@ -273,9 +273,59 @@
     </main>
     <footer>
         <div class="container">
+            <div class="header-footer">
+                 <div class="block-foooter">
+                    <h2>Increase your traffic</h2>
+                    <ul>
+                       <li><a href="#">Ad software</a></li>
+                       <li><a href="#">Blog software</a></li>
+                       <li><a href="#">SEO Software</a></li>
+                       <li><a href="#">Social Media Software</a></li>
+                       <li><a href="#">Content Managment System</a></li> 
+                    </ul>
+                 </div>
 
+                 <div class="block-foooter">
+                    <h2>Connect Whith Leads</h2>
+                    <ul>
+                       <li> <a href="#">Find New Project</a></li>
+                       <li><a href="#">Email Tracking</a></li>
+                       <li><a href="#">Sales Email Temeplates</a></li>
+                       <li><a href="#">Click To Call Your Leads</a></li>
+                       <li><a href="#">Email Marketing</a></li> 
+                    </ul>
+                 </div>
+
+                 <div class="block-foooter">
+                    <h2>Close and Manage Leads</h2>
+                    <ul>
+                       <li><a href="#">Document Tracking Tool</a></li>
+                       <li><a href="#">Meeting Schedule Tool</a></li>
+                       <li><a href="#">Sales Automation Tool</a> </li>
+                       <li><a href="#">Lead Management Tool</a></li>
+                       <li><a href="#">Pipeline Management Toole</a></li> 
+                    </ul>
+                 </div>
+
+                 <div class="block-foooter">
+                    <h2>Support and Tools</h2>
+                    <ul>
+                       <li> <a href="#">HubSpot Partners</a></li>
+                       <li><a href="#"> Join A local User Group</a></li>
+                       <li><a href="#">Get a Free WebSite Report</a> </li>
+                       <li><a href="#">HubSpot Templates</a></li>
+                       <li><a href="#"> Free Tools & Generator</a></li> 
+                    </ul>
+                 </div>
+            </div>
+            <div class="header-bottom">
+
+            </div>
         </div>
     </footer>
+    <div class="chat">
+        <i class="fas fa-comment"></i>
+    </div>
 </body>
 
 </html>
