--- a/index.html
+++ b/index.html
@@ -124,15 +124,15 @@
                     <!-- Prima colonna -->
                     <aside class="col  float-left">
                         <div class="items-top">
-                            <img src="img/Marketing-Hub-Free.svg" alt="logo-marketing">                          
+                            <img src="img/Marketing-Hub-Free.svg" alt="logo-marketing">
                         </div>
                         <div class="items-middle">
-                            <h1>Marketing Hub</h1> 
+                            <h1>Marketing Hub</h1>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit facilis porro illo ipsam magni fugiat cum asperiores animi, qui eum unde quidem blanditiis iste aperiam itaque aspernatur, distinctio provident tenetur?</p>
                         </div>
                         <div class="items-bottom">
                             <span>Popolar feature</span>
-                            <ul>  
+                            <ul>
                                 <li><i class="fas fa-check-circle"></i>Lead Generation</li>
                                 <li><i class="fas fa-check-circle"></i>Marketing Automation</li>
                                 <li><i class="fas fa-check-circle"></i>Analytics</li>
@@ -143,15 +143,15 @@
                     <!-- Seconda colonna -->
                     <aside class="col center float-left">
                         <div class="items-top">
-                            <img src="img/Sales-Professional-Illustration.svg" alt="logo-Professional-illustrations">                          
+                            <img src="img/Sales-Professional-Illustration.svg" alt="logo-Professional-illustrations">
                         </div>
                         <div class="items-middle">
-                            <h1>Sales Hub</h1> 
+                            <h1>Sales Hub</h1>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit facilis porro illo ipsam magni fugiat cum asperiores animi, qui eum unde quidem blanditiis iste aperiam itaque aspernatur, distinctio provident tenetur?</p>
                         </div>
                         <div class="items-bottom">
                             <span>Popolar feature</span>
-                            <ul>  
+                            <ul>
                                 <li><i class="fas fa-check-circle"></i>Lead Generation</li>
                                 <li><i class="fas fa-check-circle"></i>Marketing Automation</li>
                                 <li><i class="fas fa-check-circle"></i>Analytics</li>
@@ -162,15 +162,15 @@
                     <!-- Terza colonna -->
                     <aside class="col  float-left">
                         <div class="items-top">
-                            <img src="img/Service-Hub-Illustration.svg" alt="logo-service-hub">                          
+                            <img src="img/Service-Hub-Illustration.svg" alt="logo-service-hub">
                         </div>
                         <div class="items-middle">
-                            <h1>Service Hub</h1> 
+                            <h1>Service Hub</h1>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit facilis porro illo ipsam magni fugiat cum asperiores animi, qui eum unde quidem blanditiis iste aperiam itaque aspernatur, distinctio provident tenetur?</p>
                         </div>
                         <div class="items-bottom">
                             <span>Popolar feature</span>
-                            <ul>  
+                            <ul>
                                 <li><i class="fas fa-check-circle"></i>Lead Generation</li>
                                 <li><i class="fas fa-check-circle"></i>Marketing Automation</li>
                                 <li><i class="fas fa-check-circle"></i>Analytics</li>
@@ -181,60 +181,64 @@
                 </div>
             </div>
         </section>
+        <!-- Sezione Banner -->
         <section class="banner">
             <div class="container">
+                <!-- Intestazione banner -->
                 <div class="header-banner">
                     <h1>Learn and grow with award-winning support and a thriving community behind you.</h1>
                     <p>You don't have to go it alone. Master the inhound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you</p>
                 </div>
+                <!-- HEader bottom -->
                 <div class="header-bottom">
                     <div class="infomation-section">
                                 <div>
                                    <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" alt="">
-                                    <span>150</span> 
-                                 <span>HubSpot user groups</span> 
+                                    <span>150</span>
+                                 <span>HubSpot user groups</span>
                                 </div>
                                 <div>
                                     <img style="width: 30%;" src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_blog.svg" alt="">
-                                     <span>7M</span> 
-                                  <span>Monthly visits</span> 
+                                     <span>7M</span>
+                                  <span>Monthly visits</span>
                                  </div>
                                  <div>
                                     <img style="width: 55%;" src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_academy.svg" alt="">
-                                     <span>305K</span> 
-                                  <span>certified professionals</span> 
+                                     <span>305K</span>
+                                  <span>certified professionals</span>
                                  </div>
                                  <div>
                                     <img style="width: 50%;" src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_inbound.svg" alt="">
-                                     <span>26K</span> 
-                                  <span>registered attendees</span> 
+                                     <span>26K</span>
+                                  <span>registered attendees</span>
                                  </div>
-                     </div>
+                    </div>
                      <div class="infomation-section no-border-bottom ">
                         <div>
                             <img style="width: 55%;" src="https://cdn2.hubspot.net/hubfs/53/HubSpot-App-Marketplace-White.png" alt="">
-                            <span>550</span> 
-                            <span>Integrations</span> 
+                            <span>550</span>
+                            <span>Integrations</span>
                         </div>
                         <div>
                             <img style="width: 15%;" src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_globe.svg" alt="">
-                             <span>6</span> 
-                            <span>Languages</span> 
+                             <span>6</span>
+                            <span>Languages</span>
                          </div>
                          <div>
                             <img style="width: 15%;" src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_followers.svg" alt="">
-                            <span>2.6M</span> 
-                            <span>Social followers</span> 
+                            <span>2.6M</span>
+                            <span>Social followers</span>
                          </div>
                          <div>
                             <img style="width: 15%;" src="https://cdn2.hubspot.net/hubfs/53/Lists.svg" alt="">
-                            <span>95,000</span> 
-                            <span>customers</span> 
+                            <span>95,000</span>
+                            <span>customers</span>
                          </div>
                     </div>
-                </div> 
+                </div>
             </div>
         </section>
+        <!-- Section home information -->
         <section class="section-home-information">
            <div class="container">
                <div class="home-information clear-fix">
@@ -243,7 +247,7 @@
                         <h1>64,500</h1>
                         <p>customers in over 100 countries growing their businesses with HubSpot</p>
                         </div>
-                    <div class="right float-right">
+                        <div class="right float-right">
                          <div class="home-img">
                             <img src="https://f.hubspotusercontent00.net/hubfs/53/1200px-WWF_logo_svg%20(1).png" alt="">
                             <img src="https://f.hubspotusercontent00.net/hubfs/53/trello-logo-blue%20(1).png" alt="">
@@ -254,9 +258,8 @@
                             <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Classpass-logo@2x.png" alt="">
                             <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/VMware_logo_gry_RGB_300dpi@2x.png" alt="">
                         </div>
-                         
-                    </div>
-                    </div>
+                      </div>
+                 </div>
                 <div class="home-main">
                         <div class="information-left">
                             <h1>Start Growing With HubSpot Today</h1>
@@ -267,65 +270,94 @@
                 </div>
 
               </div>
-            </div> 
+            </div>
         </section>
 
     </main>
     <footer>
         <div class="container">
+            <!-- header footer -->
             <div class="header-footer">
-                 <div class="block-foooter">
-                    <h2>Increase your traffic</h2>
-                    <ul>
-                       <li><a href="#">Ad software</a></li>
-                       <li><a href="#">Blog software</a></li>
-                       <li><a href="#">SEO Software</a></li>
-                       <li><a href="#">Social Media Software</a></li>
-                       <li><a href="#">Content Managment System</a></li> 
-                    </ul>
-                 </div>
+                <div class="footer-block clear-fix">
+                    <!-- Blocchi footer -->
+                    <div class="block-foooter">
+                        <h2>Increase your traffic</h2>
+                        <ul>
+                           <li><a href="#">Ad software</a></li>
+                           <li><a href="#">Blog software</a></li>
+                           <li><a href="#">SEO Software</a></li>
+                           <li><a href="#">Social Media Software</a></li>
+                           <li><a href="#">Content Managment System</a></li>
+                        </ul>
+                     </div>
 
-                 <div class="block-foooter">
-                    <h2>Connect Whith Leads</h2>
-                    <ul>
-                       <li> <a href="#">Find New Project</a></li>
-                       <li><a href="#">Email Tracking</a></li>
-                       <li><a href="#">Sales Email Temeplates</a></li>
-                       <li><a href="#">Click To Call Your Leads</a></li>
-                       <li><a href="#">Email Marketing</a></li> 
-                    </ul>
-                 </div>
+                     <div class="block-foooter">
+                        <h2>Connect Whith Leads</h2>
+                        <ul>
+                           <li> <a href="#">Find New Project</a></li>
+                           <li><a href="#">Email Tracking</a></li>
+                           <li><a href="#">Sales Email Temeplates</a></li>
+                           <li><a href="#">Click To Call Your Leads</a></li>
+                           <li><a href="#">Email Marketing</a></li>
+                        </ul>
+                     </div>
 
-                 <div class="block-foooter">
-                    <h2>Close and Manage Leads</h2>
-                    <ul>
-                       <li><a href="#">Document Tracking Tool</a></li>
-                       <li><a href="#">Meeting Schedule Tool</a></li>
-                       <li><a href="#">Sales Automation Tool</a> </li>
-                       <li><a href="#">Lead Management Tool</a></li>
-                       <li><a href="#">Pipeline Management Toole</a></li> 
-                    </ul>
-                 </div>
+                     <div class="block-foooter">
+                        <h2>Close and Manage Leads</h2>
+                        <ul>
+                           <li><a href="#">Document Tracking Tool</a></li>
+                           <li><a href="#">Meeting Schedule Tool</a></li>
+                           <li><a href="#">Sales Automation Tool</a> </li>
+                           <li><a href="#">Lead Management Tool</a></li>
+                           <li><a href="#">Pipeline Management Toole</a></li>
+                        </ul>
+                     </div>
 
-                 <div class="block-foooter">
-                    <h2>Support and Tools</h2>
-                    <ul>
-                       <li> <a href="#">HubSpot Partners</a></li>
-                       <li><a href="#"> Join A local User Group</a></li>
-                       <li><a href="#">Get a Free WebSite Report</a> </li>
-                       <li><a href="#">HubSpot Templates</a></li>
-                       <li><a href="#"> Free Tools & Generator</a></li> 
-                    </ul>
+                     <div class="block-foooter clear-fix">
+                        <h2>Support and Tools</h2>
+                        <ul>
+                           <li> <a href="#">HubSpot Partners</a></li>
+                           <li><a href="#"> Join A local User Group</a></li>
+                           <li><a href="#">Get a Free WebSite Report</a> </li>
+                           <li><a href="#">HubSpot Templates</a></li>
+                           <li><a href="#"> Free Tools & Generator</a></li>
+                            <li><a href="#" class="btn btn-white">Contact HubSpot Support</a></li>
+                            <li>
+                                <i class="fab fa-facebook"></i>
+                                <i class="fab fa-instagram"></i>
+                                <i class="fab fa-youtube"></i>
+                                <i class="fab fa-twitter"></i>
+                                <i class="fab fa-linkedin-in"></i>
+                            </li>
+                        </ul>
+                     </div>
+                </div>
+                 <div class="language">
+                    <span>English</span>
+                    <span>Deutsch</span>
+                    <span>Espanol</span>
+                    <span>Portugues</span>
+                    <span>Francais</span>
+                    <span>Italian</span>
                  </div>
             </div>
+            <!-- HEader bottom -->
             <div class="header-bottom">
-
+                <!-- header-bottom sinistrs -->
+                <div class=" header-left float-left">
+                    <img src="https://www.hubspot.com/hubfs/WBZ-1165%20Global%20Nav%20Redesign/Wordmark-White.svg" alt="">
+                    <h3>Copyright © 2020 HubSpot, Inc.</h3>
+                </div>
+                 <!-- header-bottom destra -->
+                <div class="header-right float-right">
+                    <span>Legal Stuff</span>
+                    <span>Privacy Policy</span>
+                </div>
             </div>
         </div>
     </footer>
     <div class="chat">
-        <i class="fas fa-comment"></i>
+        <i class="far fa-envelope"></i>
     </div>
 </body>
-
 </html>
