--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <!-- per posizionare tutto il blocco  -->
                         <div class="wrapper">
                             <img src="img/CRM-Illustration.svg" alt="img-crm">
-                            <a href="#" class="btn btn-orange btn-large">Learn more</a>
+                            <a href="#" class="btn btn-orange ">Learn more</a>
                         </div>
                     </div>
                     <!-- Blocco di destra -->
