--- a/index.html
+++ b/index.html
@@ -356,8 +356,14 @@
             </div>
         </div>
     </footer>
+    <div class="textbox">
+        <img src="https://static.hsappstatic.net/bots-ui-app/ex/bot-avatar.jpg" alt=""> 
+        <i class="fas fa-times"></i>
+        <p> 👋 Want to chat abbount HubSpot? I'm here to help you find your way.</p>
+     </div>
     <div class="chat">
-        <i class="far fa-envelope"></i>
+            
+        <i class="far fa-comment-alt"></i>
     </div>
 </body>
 </html>
